Bug 1606102 - Don't use putNew in StartupCache::LoadArchive r=froydnj

We can't guarantee uniqueness of the keys here because the file might
be corrupt. So we should check if the key exists and if it does, bail
out.

Differential Revision: https://phabricator.services.mozilla.com/D58387